favicon, logo, ogtags

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#212529" />
-    <meta name="description" content="" />
+    <meta name="description" content="식사와 출퇴근에 대한 가이드로, 당신의 식단 확인 뿐 아니라 새로운 메뉴를 발견할 수 있도록 도와줍니다." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- 오픈그래프(Open Graph) -->
+    <meta property="og:url" content="https://breadkun-cce0b.firebaseapp.com/" />
+    <meta property="og:title" content="더존 빵돌이" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./logo/og-image.png" />
+    <meta property="og:description" content="식사와 출퇴근에 대한 가이드로, 당신의 식단 확인 뿐 아니라 새로운 메뉴를 발견할 수 있도록 도와줍니다." />
     <title>더존 빵돌이</title>
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
