--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <meta property="og:description" content="식사와 출퇴근에 대한 가이드로, 당신의 식단 확인 뿐 아니라 새로운 메뉴를 발견할 수 있도록 도와줍니다." />
     <title>더존 빵돌이</title>
     <meta name="robots" content="index, follow" />
+    <!-- Kakao api key -->
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	151419dd7cd5e5c64c3f5f5158c13405"></script> -->
   </head>
   <body>
     <div id="root"></div>
