--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>더존 빵돌이</title>
     <meta name="robots" content="index, follow" />
     <!-- Kakao api key -->
-    <script type="text/javascript" strategy="beforeInteractive" src="%REACT_APP_KAKAOMAP_API%"></script>
+    <script type="text/javascript" src="%REACT_APP_KAKAOMAP_API%"></script>
   </head>
   <body>
     <div id="root"></div>
