--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./logo/og-image.png" />
     <meta property="og:description" content="식사와 출퇴근에 대한 가이드로, 당신의 식단 확인 뿐 아니라 새로운 메뉴를 발견할 수 있도록 도와줍니다." />
+    <!-- Kakao api key -->
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API%"></script> -->
     <title>더존 빵돌이</title>
     <meta name="robots" content="index, follow" />
-    <!-- Kakao api key -->
-    <script type="text/javascript" src="%REACT_APP_KAKAOMAP_API%"></script>
   </head>
   <body>
     <div id="root"></div>
