meta tags, og tags edit

--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,23 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#212529" />
-    <meta name="description" content="식사와 출퇴근에 대한 가이드로, 당신의 식단 확인 뿐 아니라 새로운 메뉴를 발견할 수 있도록 도와줍니다." />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="더존비즈온 구내식당 식단과 통근 버스의 실시간 도착 시간을 안내하는 더존 빵돌이 웹 서비스입니다." />
+    <meta name="keywords" content="더존비즈온, 통근 버스, 도착시간, 구내식당, 식단, 날씨, 회식장소, 빵돌이" />
+    <meta name="robots" content="index, follow" />
     <!-- 오픈그래프(Open Graph) -->
     <meta property="og:url" content="https://breadkun-cce0b.firebaseapp.com/" />
-    <meta property="og:title" content="더존 빵돌이" />
+    <meta property="og:title" content="더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./logo/og-image.png" />
-    <meta property="og:description" content="식사와 출퇴근에 대한 가이드로, 당신의 식단 확인 뿐 아니라 새로운 메뉴를 발견할 수 있도록 도와줍니다." />
+    <meta property="og:description" content="더존비즈온 구내식당 식단과 통근 버스의 실시간 도착 시간을 안내하는 더존 빵돌이 웹 서비스입니다." />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내</title>
     <!-- Kakao api key -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API%&libraries=services"></script>
-    <title>더존 빵돌이</title>
-    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
