--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="더존비즈온, 통근 버스, 도착시간, 구내식당, 식단, 날씨, 회식장소, 빵돌이" />
     <meta name="robots" content="index, follow" />
     <!-- 오픈그래프(Open Graph) -->
-    <meta property="og:url" content="https://breadkun-cce0b.firebaseapp.com/" />
+    <meta property="og:url" content="https://breadkun.com/" />
     <meta property="og:title" content="더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./logo/og-image.png" />
