--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <title>더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내</title>
     <!-- Kakao api key -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API%&libraries=services"></script>
+    <!-- naver search advisor -->
+    <meta name="naver-site-verification" content="114e2081d9285565efb98f83edf15a821be642ef" />
   </head>
   <body>
     <div id="root"></div>
