open api connect

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내</title>
-    <!-- Kakao api key -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API%&libraries=services"></script>
+    <!-- Kakao api -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_API_KEY%&libraries=services"></script>
     <!-- naver search advisor -->
     <meta name="naver-site-verification" content="114e2081d9285565efb98f83edf15a821be642ef" />
+    <!-- http => https -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   </head>
   <body>
     <div id="root"></div>
