--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <!-- naver search advisor -->
     <meta name="naver-site-verification" content="114e2081d9285565efb98f83edf15a821be642ef" />
     <!-- http => https -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" /> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   </head>
   <body>
     <div id="root"></div>
