Header design edit

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <!-- naver search advisor -->
     <meta name="naver-site-verification" content="114e2081d9285565efb98f83edf15a821be642ef" />
     <!-- http => https -->
+    <!-- 오류땜에 사용 안함 -->
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" /> -->
   </head>
   <body>
