--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
     <meta property="og:image" content="./logo/og-image.png" />
     <meta property="og:description" content="더존비즈온 구내식당 식단과 통근 버스의 실시간 도착 시간을 안내하는 더존 빵돌이 웹 서비스입니다." />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내</title>
