--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png" />
+    <!-- 아이폰 PWA 스플래시 test -->
+    <link
+      rel="apple-touch-startup-image"
+      media="screen and (device-width: 360px) and (device-height: 780px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+      href="%PUBLIC_URL%/logo512.png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내</title>
