--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <!-- 아이폰 PWA 스플래시 test -->
     <link
       rel="apple-touch-startup-image"
-      media="screen and (device-width: 360px) and (device-height: 780px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="%PUBLIC_URL%/logo512.png" />
+      media="screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
+      href="%PUBLIC_URL%/iPhone_13_mini__iPhone_12_mini__iPhone_11_Pro__iPhone_XS__iPhone_X_portrait.png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내</title>
