--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+    <script type="text/javascript">
+      if (!wcs_add) var wcs_add = {};
+      wcs_add['wa'] = '2bc1d10b4c655c';
+      if (window.wcs) {
+        wcs_do();
+      }
+    </script>
   </body>
 </html>
