--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- naver analytics -->
     <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
     <script type="text/javascript">
       if (!wcs_add) var wcs_add = {};
