test: prettier & eslint test

--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
+<head>
     <!-- Google analytics tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N9RD4T5XP7"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-      gtag('config', 'G-N9RD4T5XP7');
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'G-N9RD4T5XP7');
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#212529" />
     <meta
-      name="description"
-      content="더존ICT의 구내식당 식단, 통근 버스의 실시간 도착 시간, 오늘의 빵, 사내 카페 메뉴, 날씨 등 다양한 생활 정보를 안내하는 더존 빵돌이 웹 서비스입니다." />
+        name="description"
+        content="더존ICT의 구내식당 식단, 통근 버스의 실시간 도착 시간, 오늘의 빵, 사내 카페 메뉴, 날씨 등 다양한 생활 정보를 안내하는 더존 빵돌이 웹 서비스입니다." />
     <meta name="keywords" content="빵돌이, 더존ICT, 더존, 생활정보, 버스, 시간, 식당, 식단, 날씨, 회식장소, 맛집, 카페" />
     <meta name="robots" content="index, follow" />
     <!-- 오픈그래프(Open Graph) -->
@@ -25,8 +27,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./logo/og-image.png" />
     <meta
-      property="og:description"
-      content="더존ICT의 구내식당 식단, 통근 버스의 실시간 도착 시간, 오늘의 빵, 사내 카페 메뉴, 날씨 등 다양한 생활 정보를 안내하는 더존 빵돌이 웹 서비스입니다." />
+        property="og:description"
+        content="더존ICT의 구내식당 식단, 통근 버스의 실시간 도착 시간, 오늘의 빵, 사내 카페 메뉴, 날씨 등 다양한 생활 정보를 안내하는 더존 빵돌이 웹 서비스입니다." />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png" />
@@ -34,20 +36,21 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>더존 빵돌이 | 다양한 더존ICT 생활 정보</title>
     <!-- Kakao api -->
-    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_API_KEY%&libraries=services"></script>
+    <script type="text/javascript"
+            src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_API_KEY%&libraries=services"></script>
     <!-- naver search advisor -->
     <meta name="naver-site-verification" content="114e2081d9285565efb98f83edf15a821be642ef" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <!-- naver analytics -->
-    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
-    <script type="text/javascript">
-      if (!wcs_add) var wcs_add = {};
-      wcs_add['wa'] = '2bc1d10b4c655c';
-      if (window.wcs) {
+</head>
+<body>
+<div id="root"></div>
+<!-- naver analytics -->
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+    if (!wcs_add) var wcs_add = {};
+    wcs_add['wa'] = '2bc1d10b4c655c';
+    if (window.wcs) {
         wcs_do();
-      }
-    </script>
-  </body>
+    }
+</script>
+</body>
 </html>
